--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-#python=>3.8.8
-import os  
-import sys
-import logging
-import xlrd, xlwt
-import datetime
-import statistics
-import numpy as np
-import pandas as pd
-import pymrio
-import seaborn as sns
-import matplotlib.pyplot as plt
-from openpyxl import load_workbook
+python>=3.8.8
+numpy
+pandas
+seaborn
+matplotlib
+openpyxl
+xlrd
+xlwt
+pymrio
